# macropad

./: .gitignore  CMakeLists.txt  license  readme.md
notes/: keycodes.md
src/: InputEvent.cpp  InputEvent.h  InputEventPool.cpp  InputEventPool.h  KeyDefinitions.h  KeyboardState.cpp  KeyboardState.h  main.c  main.cpp  oldmain.c  tusb_config.h  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h
src/board/: board.cpp  board.h
src/input/: BoardInput.cpp  BoardInput.h  InputDevice.cpp  InputDevice.h
